# zmon-slo-metrics

./: .dockerignore  .gitignore  .zappr.yaml  MANIFEST.in  README.rst  delivery.yaml  docker-compose.yaml  generate-slr.py  requirements.txt  setup.py  swagger.yaml  tox.ini
app/: __init__.py  config.py  main.py  session.py  slo.py
app/extensions/: __init__.py  session.py  throttle.py  tracer.py
app/handler/: product.py  report.py  updater.py
app/libs/: authorization.py  oauth.py  resource.py  tracer.py  zmon.py
app/migrations/: README.rst
app/resources/: __init__.py
app/routes/: __init__.py  middleware.py  routes.py  throttle.py
cli/: LICENSE  Makefile  pyproject.toml
client/: README.md  bower.json  config.json  index.html  index.js  package.json  polymer.json
client-v2/: package.json
client-v2/src/: App.jsx  index.css  index.js  serviceWorker.js
client/src/: common-styles.html  common-styles.js  lazy-resources.html  lazy-resources.js  slr-404.html  slr-404.js  slr-ajax.html  slr-ajax.js  slr-app.html  slr-app.js  slr-auth.js  slr-card.html  slr-dialog.html  slr-dialog.js  slr-error.html  slr-error.js  slr-fab.html  slr-fab.js  slr-form-modal.html  slr-form.js  slr-indicator-view.html  slr-indicator-view.js  slr-items-data.html  slr-items-data.js  slr-login.html  slr-modal.html  (+27 more)
dockerfiles/: Dockerfile  Dockerfile.frontend  Dockerfile.generator  Dockerfile.migrate  migrate.py  nginx-default.conf  reports.py
mock/: Gruntfile.js  package.json
templates/: slr-weekly.html
zmon_slr/: __main__.py  client.py  generate_slr.py  main.py  plot.py
(+32 files in other folders)
