[tool.poetry]
name = "zmon-slr"
version = "0.1"
description = "ZMON SLO reports."
authors = ["Whatever <whatever@acme.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring"
]

[tool.poetry.dependencies]
python = "^3.6"
clickclick = "^1.2.2"
stups-zign = "^1.2"
zmon-cli = "^1.1.61"
jinja2 = "^2.10.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[tool.poetry.scripts]
zmon-slr = "zmon_slr.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
